Update test to java 17